# AdventOfCode

./: .eslintrc.js  README.md  package.json
2022/: .gitignore  README.md  package.json  tsconfig.json
2022-01/: index.js
2022/public/: day12.md  day13.md  day2.md  day9.md
2022/src/: day1.ts  day11.ts  day13.ts  day2.ts  day6.ts  day7.ts
2025/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
2025/src/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  utils.py
public/: day02.md  day1.md  day10.md  day11.md  day12.md  day13.md  day14.md  day3.md  day5.md  day6.md  day7.md  day8.md  day9.md
src/: day0.ts  day01.ts  day02.ts  day1.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day2.ts  day3.ts  day4.ts  day5.ts  day6.ts  day7.ts  day8.ts  day9.ts  index.ts  readFile.ts
